# notes_to_blog

./: .gitignore  README.md  crewai_flow.html  notes.md  pyproject.toml
src/note_to_blog_flow/: config.py  main.py  types.py
src/note_to_blog_flow/crews/editing_crew/: editing_crew.py
src/note_to_blog_flow/crews/editing_crew/config/: agents.yaml  tasks.yaml
src/note_to_blog_flow/crews/outline_crew/: outline_crew.py
src/note_to_blog_flow/crews/outline_crew/config/: agents.yaml  tasks.yaml
src/note_to_blog_flow/crews/review_crew/: review_crew.py
src/note_to_blog_flow/crews/review_crew/config/: agents.yaml  tasks.yaml
src/note_to_blog_flow/crews/scrape_crew/: scrape_crew.py
src/note_to_blog_flow/crews/scrape_crew/config/: agents.yaml  tasks.yaml
src/note_to_blog_flow/crews/writing_crew/: writing_crew.py
src/note_to_blog_flow/crews/writing_crew/config/: agents.yaml  tasks.yaml
