[project]
name = "note_to_blog_flow"
version = "0.1.0"
description = "note_to_blog_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "langtrace-python-sdk==3.3.13"
]

[project.scripts]
kickoff = "note_to_blog_flow.main:kickoff"
plot = "note_to_blog_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
